<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="shipTo1RowModel" type="com.application.app.modules.shipto.data.model.ShipTo1RowModel"/>
    </data>
    <LinearLayout android:id="@+id/linear"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_1">
        <TextView android:gravity="top|start"
            android:id="@+id/txtPriscekila"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="wrap_content"
            android:text="@{shipTo1RowModel.txtPriscekila}"
            style="@style/txtPoppinsbold14_2" tools:text="@string/lbl_priscekila"/>
        <TextView android:gravity="top|start"
            android:id="@+id/txt3711SpringHil"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:text="@{shipTo1RowModel.txt3711SpringHil}"
            style="@style/txtPoppinsregular12" tools:text="@string/msg_3711_spring_hil"/>
        <TextView android:gravity="top|start"
            android:id="@+id/txt991234567890"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="wrap_content"
            android:text="@{shipTo1RowModel.txt991234567890}"
            style="@style/txtPoppinsregular12" tools:text="@string/lbl_99_1234567890"/>
        <LinearLayout android:id="@+id/linear1"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_24pxv"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:gravity="top|start"
                android:id="@+id/txtEdit"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_weight="0.2" android:layout_width="0dp"
                android:text="@{shipTo1RowModel.txtEdit}"
                style="@style/txtPoppinsbold14_3" tools:text="@string/lbl_edit"/>
            <TextView android:gravity="top|start"
                android:id="@+id/txtDelete"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_209pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_weight="0.4" android:layout_width="0dp"
                android:text="@{shipTo1RowModel.txtDelete}"
                style="@style/txtPoppinsbold14_4" tools:text="@string/lbl_delete"/>
        </LinearLayout>
    </LinearLayout>
</layout>
