<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registerFormVM" type="com.application.app.modules.registerform.data.viewmodel.RegisterFormVM"/>
    </data>
    <LinearLayout android:id="@+id/linear"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:gravity="center" android:id="@+id/image"
            android:layout_gravity="center"
            android:layout_height="@dimen/_72pxv"
            android:layout_marginEnd="@dimen/_152pxh"
            android:layout_marginStart="@dimen/_151pxh"
            android:layout_marginTop="@dimen/_123pxv"
            android:layout_width="@dimen/_72pxh"
            android:scaleType="fitXY" android:src="@drawable/img_logo_1"/>
        <TextView android:gravity="center"
            android:id="@+id/txtLetSGetStart"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_116pxh"
            android:layout_marginStart="@dimen/_116pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="wrap_content"
            android:text="@{registerFormVM.registerFormModel.txtLetSGetStart}"
            style="@style/txtPoppinsbold16" tools:text="@string/msg_let_s_get_start"/>
        <TextView android:gravity="center"
            android:id="@+id/txtCreateAnNewA"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_112pxh"
            android:layout_marginStart="@dimen/_111pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="wrap_content"
            android:text="@{registerFormVM.registerFormModel.txtCreateAnNewA}"
            style="@style/txtPoppinsregular12" tools:text="@string/msg_create_an_new_a"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_blue_50_radius_5"
            android:drawablePadding="@dimen/_5pxh"
            android:drawableStart="@drawable/img_group_6"
            android:hint="@string/lbl_full_name"
            android:id="@+id/etFullName"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_12pxv" android:singleLine="true"
            android:text="@={registerFormVM.registerFormModel.etFullNameValue}"
            android:textColorHint="@color/bluegray_300" style="@style/etSolidRoundedOutline"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_blue_50_radius_5"
            android:drawablePadding="@dimen/_5pxh"
            android:drawableStart="@drawable/img_group_2"
            android:hint="@string/lbl_your_email"
            android:id="@+id/etYourEmail"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_12pxv" android:singleLine="true"
            android:text="@={registerFormVM.registerFormModel.etYourEmailValue}"
            android:textColorHint="@color/bluegray_300" style="@style/etSolidRoundedOutline"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_blue_50_radius_5"
            android:drawablePadding="@dimen/_5pxh"
            android:drawableStart="@drawable/img_group_3"
            android:hint="@string/lbl_password"
            android:id="@+id/etPassword"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_12pxv" android:singleLine="true"
            android:text="@={registerFormVM.registerFormModel.etPasswordValue}"
            android:textColorHint="@color/bluegray_300" style="@style/etSolidRoundedOutline"/>
        <EditText
            android:background="@drawable/rectangle_bg_white_a700_border_blue_50_radius_5"
            android:drawablePadding="@dimen/_5pxh"
            android:drawableStart="@drawable/img_group_3"
            android:hint="@string/lbl_password_again"
            android:id="@+id/etPasswordAgain"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_12pxv" android:singleLine="true"
            android:text="@={registerFormVM.registerFormModel.etPasswordAgainValue}"
            android:textColorHint="@color/bluegray_300" style="@style/etSolidRoundedOutline"/>
        <androidx.appcompat.widget.AppCompatButton
            android:clickable="true" android:gravity="center"
            android:id="@+id/btnSignUp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:text="@string/lbl_sign_up"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_sign_up"/>
        <TextView android:gravity="center"
            android:id="@+id/txtHaveAnAccount"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_156pxv"
            android:layout_marginEnd="@dimen/_105pxh"
            android:layout_marginStart="@dimen/_105pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:text="@{registerFormVM.registerFormModel.txtHaveAnAccount}"
            style="@style/txtPoppinsbold12_1" tools:text="@string/msg_have_an_account"/>
    </LinearLayout>
</layout>
